# SBT

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml
csv-converter/: csv-converter.cabal
csv-converter/app/: Main.hs
csv-converter/src/CSVConverter/: FancyCSV.hs  Main.hs
data/: .~lock.VDCRM.csv#  VDCRM.XLSX  VDCRM.csv
hive-ddl/: hive-ddl.cabal
hive-ddl/src/: Main.hs
sql-tool/: sql-tool.cabal
sql-tool/app/: Main.hs
sql-tool/src/: Args.hs  Commands.hs
sql-tool/src/Commands/: CreateTableFromCSV.hs
sql-tool/src/SQL/: Syntax.hs
sql-tool/src/SQL/Syntax/: Abstract.hs  Concrete.hs  Lens.hs
sql-tool/test/: Spec.hs
