name:                csv-converter
version:             0.1.0.0
synopsis:            Convers our fancy file formats to something Hive work with
description:         Please see README.md
homepage:            https://github.com/schernichkin/SBT/README.md
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2016 Stanislav Chernichkin
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , binary
                     , bytestring
                     , optparse-applicative
                     , mtl
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , timeit
  exposed-modules:     CSVConverter.FancyCSV
                     , CSVConverter.Main
  default-language:    Haskell2010

executable csv-converter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -rtsopts -with-rtsopts=-qs
  build-depends:       base
                     , csv-converter
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schernichkin/SBT
