name:                sql-tool
version:             0.1.0.0
synopsis:            SQL script generator
description:         Please see README.md
homepage:            https://github.com/schernichkin/SBT/hive-ddl#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2016 Stanislav Chernichkin
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , data-default
                     , filepath
                     , invertible-syntax-poly
                     , lens
                     , mtl
                     , optparse-applicative
                     , text
                     , vector
  exposed-modules:     Args
                     , Commands
                     , Commands.CreateTableFromCSV
                     , SQL.Syntax
                     , SQL.Syntax.Abstract
                     , SQL.Syntax.Concrete
                     , SQL.Syntax.Lens
  default-language:    Haskell2010

executable sql-tool
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sql-tool
  default-language:    Haskell2010

test-suite sql-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , invertible-syntax-poly
                     , HUnit
                     , QuickCheck
                     , sql-tool
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spec.main
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schernichkin/SBT
